syntax = "proto3";

package user;
option go_package = "partymanager/server/api/user;user";
import "google/protobuf/empty.proto";

service User {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Register (RegisterRequest) returns (LoginResponse) {}
  rpc GetMe (google.protobuf.Empty) returns (UserResponse) {}
  rpc UpdateMe (UpdateRequest) returns (UserResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  bool isSSO = 4;
  string idSSO = 5;
  string typeSSO = 6;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message LoginResponse {
  string token = 1;
  string email = 2;
}

message UserResponse {
  uint32 id = 1;
  string email = 2;
  string username = 3;
}

message UpdateRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

