syntax = "proto3";

package tchat;
option go_package = "partymanager/server/api/tchat;tchat";

service Tchat {
  rpc AddMessage (AddMessageRequest) returns (AddMessageResponse) {}
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse) {}
}

message AddMessageRequest {
  uint32 userId = 1;
  uint32 partyId = 2;
  string content = 3;
}

message AddMessageResponse {
  Message message = 1;
}

message GetMessagesRequest {
  uint32 userId = 1;
  uint32 partyId = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  uint32 id = 1;
  uint32 userId = 2;
  string userName = 3;
  string content = 4;
  string createdAt = 5;
}

